// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render alignment 1`] = `
<div
  class="wp-components-container css-1b38t0n"
  data-g2-c16t="true"
  data-g2-component="Container"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-container css-1t6va38"
  data-g2-c16t="true"
  data-g2-component="Container"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render width 1`] = `
<div
  class="wp-components-container css-511he8"
  data-g2-c16t="true"
  data-g2-component="Container"
>
  Some people are worth melting for.
</div>
`;
